--- a/src/main/webapp/page/index.css
+++ b/src/main/webapp/page/index.css
@@ -1,4 +1,6 @@
-body {
+html, body {
+    height: 100%;
+    margin: 0;
     background-color: #FEFDFB;
     font-family: monospace, Meiryo, "微軟正黑體", "Microsoft JhengHei";
 }
