Enable scroll in mobile and tablet.

--- a/src/main/webapp/page/index.css
+++ b/src/main/webapp/page/index.css
@@ -97,8 +97,8 @@ h3 {
 }
 
 /* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1024px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
-        background-attachment: scroll;
-    }
-}
+/*@media only screen and (max-device-width: 1024px) {*/
+    /*.bgimg-1, .bgimg-2, .bgimg-3 {*/
+        /*background-attachment: scroll;*/
+    /*}*/
+/*}*/
