Update home page.

--- a/src/main/webapp/page/index.css
+++ b/src/main/webapp/page/index.css
@@ -12,6 +12,10 @@ h3 {
     color: #111;
 }
 
+footer{
+    display: block;
+}
+
 .bgimg-1, .bgimg-2, .bgimg-3 {
     position: relative;
     opacity: 0.65;
@@ -60,14 +64,6 @@ h3 {
     color: #282E34;
 }
 
-.login a:active {
-    padding: 5px;
-    text-decoration: none;
-    background-color: #ffffff;
-    opacity: 0.5;
-    color: #111111;
-}
-
 .caption {
     position: absolute;
     left: 0;
@@ -95,6 +91,14 @@ h3 {
     letter-spacing: 3px;
     text-transform: uppercase;
     color: #fff;
+}
+
+.footer-copyright {
+    clear: both;
+    letter-spacing: 2px;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
 }
 
 /* Turn off parallax scrolling for tablets and phones */
