--- a/src/main/webapp/page/index.css
+++ b/src/main/webapp/page/index.css
@@ -41,27 +41,24 @@ footer{
 
 .login {
     float: right;
-    position: fixed;
     border: solid #fff 1px;
-    padding: 5px;
-    margin: 16px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right: 10px;
+    margin-top: 5px;
     text-align: center;
-    letter-spacing: 1px;
+    display: block;
 }
 
 .login a:link, a:visited {
-    padding: 10px;
     text-decoration: none;
     background-color: transparent;
     color: #ffffff;
+    padding: 10px;
 }
 
 .login a:hover {
-    padding: 10px;
-    text-decoration: none;
-    background-color: #ffffff;
-    opacity: 0.5;
-    color: #282E34;
+    background-color: #777777;
 }
 
 .caption {
@@ -99,6 +96,48 @@ footer{
     text-align: center;
     font-size: 12px;
     padding: 15px;
+}
+
+/* Page content */
+.content {
+    padding-top: 50px;
+    padding-bottom: 60px;
+    min-height: 100%;
+    position: relative;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+    padding-top: 60px;
+}
+
+#navbar {
+    overflow: auto;
+    position: fixed;
+    background-color: #444444;
+    width: 100%;
+    height: 50px;
+}
+
+/* Navbar links */
+#tab a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+}
+
+#tab a:hover {
+    background-color: #777777;
 }
 
 /* Turn off parallax scrolling for tablets and phones */
