--- a/src/main/webapp/page/order/order.css
+++ b/src/main/webapp/page/order/order.css
@@ -8,7 +8,7 @@ form div{padding:0}
 #content{width:100%}
 #center{margin:10px; text-align: center}
 #accountFields{padding-left:50px}
-#input_comment {padding-bottom: 10px}
+#inputComment {padding-bottom: 10px}
 
 .buttoninput{clear:both}
 .textinput{padding-top:10px;clear:both}
