--- a/src/main/webapp/page/index.css
+++ b/src/main/webapp/page/index.css
@@ -45,7 +45,7 @@ footer{
     border: solid #fff 1px;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-right: 10px;
+    margin-right: 15px;
     margin-top: 5px;
     text-align: center;
     display: block;
@@ -56,7 +56,7 @@ footer{
     text-decoration: none;
     background-color: transparent;
     color: white;
-    padding: 10px;
+    padding: 10px 18px 10px 18px;
 }
 
 .login a:hover {
@@ -124,7 +124,7 @@ footer{
 #tab a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: darkgray;
     text-align: center;
     padding: 14px;
     text-decoration: none;
@@ -132,6 +132,16 @@ footer{
 
 #tab a:hover {
     background-color: #777777;
+    color: #f2f2f2;
+}
+
+#tab a.active {
+    color: white;
+    text-shadow: #f2f2f2;
+}
+
+#tab a.active:hover {
+    background-color: transparent;
 }
 
 /* Turn off parallax scrolling for tablets and phones */
