--- a/src/main/webapp/page/product/product.css
+++ b/src/main/webapp/page/product/product.css
@@ -27,7 +27,7 @@ body, html {
 #tab a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: darkgray;
     text-align: center;
     padding: 14px;
     text-decoration: none;
@@ -35,25 +35,36 @@ body, html {
 
 #tab a:hover {
     background-color: #777777;
+    color: #f2f2f2;
+}
+
+#tab a.active {
+    color: white;
+    text-shadow: #f2f2f2;
+}
+
+#tab a.active:hover {
+    background-color: transparent;
 }
 
 .login {
+    min-width: 100px;
     float: right;
     border: solid #fff 1px;
-    padding-top: 6px;
-    padding-bottom: 7px;
-    margin-right: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right: 15px;
     margin-top: 5px;
     text-align: center;
     display: block;
     z-index: 1;
 }
 
-.login a:link, a:visited {
+.login a {
     text-decoration: none;
     background-color: transparent;
-    color: #ffffff;
-    padding: 8px;
+    color: white;
+    padding: 10px 18px 10px 18px;
 }
 
 .login a:hover {
