Update product list page

--- a/src/main/webapp/page/products.css
+++ b/src/main/webapp/page/products.css
@@ -22,6 +22,11 @@ body, html {
     overflow: hidden;
     background-color: #444444;
     width: 100%;
+    z-index: 1;
+}
+
+#navbar::after {
+    clear: both;
 }
 
 #tab a {
@@ -71,10 +76,6 @@ body, html {
     background-color: #777777;
 }
 
-.content {
-    padding: 16px;
-}
-
 .sticky {
     position: fixed;
     top: 0;
@@ -83,4 +84,61 @@ body, html {
 
 .sticky + .content {
     padding-top: 70px;
+}
+
+.content {
+    padding: 16px;
+    z-index: -1;
+}
+
+.prod-list {
+    display: table;
+    margin: 2%;
+}
+
+.prod-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 40%;
+    margin: 2% 4.5% 2% 4.5%;
+}
+
+.info {
+    position: absolute;
+    width: 100%;
+    padding: 10px;
+    bottom: 0;
+    color: white;
+    text-align: center;
+}
+
+@media (max-width: 1200px) {
+    .info {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .info {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 800px) {
+    .prod-wrapper {
+        width: 90%;
+        margin: 2% 5% 2% 5%;
+    }
+
+    .info {
+        font-size: 15px;
+    }
+}
+
+.footer-copyright {
+    clear: both;
+    letter-spacing: 2px;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
 }
