--- a/src/main/webapp/page/product/product.css
+++ b/src/main/webapp/page/product/product.css
@@ -22,6 +22,11 @@ body, html {
     overflow: hidden;
     background-color: #444444;
     width: 100%;
+    z-index: 1;
+}
+
+#navbar::after {
+    clear: both;
 }
 
 #tab a {
@@ -71,10 +76,6 @@ body, html {
     background-color: #777777;
 }
 
-.content {
-    padding: 16px;
-}
-
 .sticky {
     position: fixed;
     top: 0;
@@ -83,4 +84,16 @@ body, html {
 
 .sticky + .content {
     padding-top: 70px;
+}
+
+.content {
+    padding: 16px;
+}
+
+.footer-copyright {
+    clear: both;
+    letter-spacing: 2px;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
 }
