--- a/src/main/webapp/page/products.css
+++ b/src/main/webapp/page/products.css
@@ -4,31 +4,14 @@ body, html {
     font: 400 15px/1.8 "Lato", sans-serif;
 }
 
-.header {
-    padding: 30px;
-    text-align: center;
-    color: white;
-    opacity: 0.8;
-    background: url("https://farm5.staticflickr.com/4492/37708014331_f25832e032_z.jpg") no-repeat center;
-    background-size: cover;
-    min-height: 200px;
-}
-
-.header h2 {
-    font-size: 36px;
-    opacity: 1;
-}
-
-.header p {
-    font-size: 20px;
-    opacity: 1;
-}
-
 #navbar {
-    overflow: hidden;
+    overflow: auto;
+    position: fixed;
     background-color: #444444;
     width: 100%;
+    height: 50px;
     z-index: 1;
+    top: 0;
 }
 
 #navbar::after {
@@ -82,14 +65,26 @@ body, html {
     background-color: #777777;
 }
 
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%
+.banner {
+    margin-top: 50px;
+    padding: 30px;
+    text-align: center;
+    color: white;
+    opacity: 0.8;
+    background: url("https://farm5.staticflickr.com/4492/37708014331_f25832e032_z.jpg") no-repeat center;
+    background-size: cover;
+    min-height: 200px;
+    letter-spacing: 10px;
 }
 
-.sticky + .content {
-    padding-top: 70px;
+.banner h2 {
+    font-size: 36px;
+    opacity: 1;
+}
+
+.banner p {
+    font-size: 20px;
+    opacity: 1;
 }
 
 .content {
