--- a/src/main/webapp/page/product.css
+++ b/src/main/webapp/page/product.css
@@ -95,16 +95,68 @@ body, html {
 .info {
     margin: 2%;
     padding-bottom: 2%;
+    letter-spacing: 2px;
+    /*background-color: lavenderblush; !*for testing*!*/
+}
+
+.info-content {
+    margin: 2%;
+    display: inline-block;
+    vertical-align: top;
+    /*background-color: #f2f2f2; !*for testing*!*/
+}
+
+.info-content img {
+    margin-right: 3%;
+    margin-left: 3%;
+    width: 80%;
+}
+
+.info-content th  {
+    width: 90px;
+    color: #777777;
+    font-weight: normal;
+    /*background-color: #f2f2f2; !*for testing*!*/
+}
+
+.info-content td {
+    width: 200px;
+    /*background-color: #f2f2f2; !*for testing*!*/
+}
+
+select {
+    /*margin-top: 50px;*/
+    width: 80px;
+    height: 30px;
+    border-style: dotted;
+    outline-color: #cccccc;
+}
+
+.border {
     border-bottom: solid #cccccc 2px ;
 }
 
-.info img {
-    width: 45%;
-    padding: 1%;
+@media (max-width: 1200px) {
+    .info-content {
+        margin: 2% 0 2% 0;
+        letter-spacing: 1px;
+    }
+    .info-content img {
+        margin-right: 0.5%;
+        margin-left: 3%;
+        width: 75%;
+    }
 }
 
-@media (max-width: 1200px) {
-
+@media (max-width: 1000px) {
+    .info-content {
+        margin: 2% 0 2% 0;
+    }
+    .info-content img {
+        margin-right: 0;
+        margin-left: 3%;
+        width: 73%;
+    }
 }
 
 .footer-copyright {
