--- a/application/src/main/webapp/page/product.css
+++ b/application/src/main/webapp/page/product.css
@@ -161,8 +161,21 @@ select:hover {
 
 .border {
     border-bottom: solid #cccccc 2px ;
-    width: 50%;
-    margin-left: 25%;
+    width: 80%;
+    margin-left: auto;
+    /*margin-right: auto;*/
+}
+
+.border2 {
+    border-top: solid #cccccc 2px;
+    width: 80%;
+    margin-right: auto;
+    margin-top: 1%;
+}
+
+#photos img {
+    display: block;
+    margin: 4% auto; /* margin: (top, bottom) (left, right) */
 }
 
 @media (max-width: 1200px) {
