--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -4,6 +4,8 @@ body, html {
     font: 400 15px/1.8 "Lato", sans-serif;
 }
 
+.material-icons.md-light { color: rgba(255, 255, 255, 1); }
+
 #navbar {
     overflow: auto;
     position: fixed;
@@ -41,27 +43,18 @@ body, html {
     background-color: transparent;
 }
 
-.login {
-    min-width: 100px;
+#cart, #member {
     float: right;
-    border: solid #fff 1px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-right: 15px;
-    margin-top: 5px;
-    text-align: center;
     display: block;
-    z-index: 1;
-}
-
-.login a {
-    text-decoration: none;
-    background-color: transparent;
     color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
 }
 
-.login:hover {
+#cart:hover, #member:hover {
     background-color: #777777;
+    color: #f2f2f2;
 }
 
 .banner {
