--- a/application/src/main/webapp/page/signin.css
+++ b/application/src/main/webapp/page/signin.css
@@ -6,6 +6,7 @@
     padding-bottom: 5px;
     margin-right: 15px;
     margin-top: 5px;
+    margin-left: 5px;
     text-align: center;
     display: block;
     z-index: 1;
