Separate UI into wrapper, header, content, and footer.

--- a/application/src/main/webapp/page/index.css
+++ b/application/src/main/webapp/page/index.css
@@ -23,7 +23,7 @@ footer{
 
 .bgimg-1 {
     background-image: url("https://farm5.staticflickr.com/4459/37675712692_795b99cd04_z.jpg");
-    min-height: 100%;
+    min-height: 600px;
 }
 
 .bgimg-2 {
