--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -146,3 +146,15 @@ body, html {
     font-size: 12px;
     padding: 15px;
 }
+
+.formTitle {
+    margin-left: 50px;
+    margin-bottom: 0;
+    margin-top: 50px;
+}
+
+.borderLeft {
+    border-top: solid #cccccc 2px;
+    width: 80%;
+    margin-right: auto;
+}
