--- a/application/src/main/webapp/page/order.css
+++ b/application/src/main/webapp/page/order.css
@@ -7,4 +7,21 @@ fieldset {
     color: #444;
 }
 
+#cartTable {
+    width: 500px;
+    background-color: #f7f7f7;
+    text-align: center;
+}
+
+.cartProductName {
+    text-align: left;
+}
+
+.cartImage {
+    width: 150px;
+    vertical-align: middle;
+    /*padding: 10px;*/
+}
+
+
 
