--- a/application/src/main/webapp/page/index.css
+++ b/application/src/main/webapp/page/index.css
@@ -36,29 +36,96 @@ footer{
     min-height: 500px;
 }
 
-.introduce {
-    z-index: -1;
-}
-
 .caption {
     position: absolute;
     left: 0;
     top: 40%;
     width: 100%;
     text-align: center;
-    color: #000;
-}
-
-.caption span.border {
-    background-color: #111;
-    color: #fff;
-    font-size: 25px;
     letter-spacing: 10px;
+    background-color:transparent;
+    font-size: 25px;
+    color: #f7f7f7;
 }
 
-/* Turn off parallax scrolling for tablets and phones */
-/*@media only screen and (max-device-width: 1024px) {*/
-    /*.bgimg-1, .bgimg-2, .bgimg-3 {*/
-        /*background-attachment: scroll;*/
-    /*}*/
-/*}*/
+.caption .title {
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.introduce {
+    padding:50px 80px;
+    text-align: justify;
+    color: #777;
+    background-color:white;
+}
+
+.contact {
+    color:#ddd;
+    background-color:#ffffff;
+    padding:100px 80px;
+    text-transform: uppercase;
+}
+
+.contact .title {
+    letter-spacing: 5px;
+    font: 20px "Lato", sans-serif;
+    color: tan;
+}
+
+.contact .text {
+    font-weight: 200;
+    letter-spacing: 1px;
+    color: darkgray;
+}
+
+/* phone version 手機版 */
+@media only screen and (max-device-width: 1024px) {
+    h3 {
+        letter-spacing: 10px;
+        font: 30px "Lato", sans-serif;
+    }
+
+    .bgimg-1 {
+        min-height: 900px;
+    }
+
+    .bgimg-2 {
+        min-height: 900px;
+    }
+
+    .bgimg-3 {
+        min-height: 900px;
+    }
+
+    .caption {
+        left: 0;
+        top: 40%;
+        width: 100%;
+        letter-spacing: 10px;
+        font-size: 40px;
+    }
+
+    .caption .title {
+        font-size: 52px;
+    }
+
+    .introduce {
+        padding:100px 80px;
+        font-size: 28px;
+    }
+
+    .contact {
+        padding:100px 80px;
+    }
+
+    .contact .title {
+        letter-spacing: 10px;
+        font: 40px "Lato", sans-serif;
+    }
+
+    .contact .text {
+        letter-spacing: 3px;
+    }
+
+}
