--- a/application/src/main/webapp/page/index.css
+++ b/application/src/main/webapp/page/index.css
@@ -9,10 +9,6 @@ h3 {
     color: #111;
 }
 
-footer{
-    display: block;
-}
-
 .bgimg-1, .bgimg-2, .bgimg-3 {
     position: relative;
     opacity: 0.65;
@@ -63,7 +59,7 @@ footer{
 .contact {
     color:#ddd;
     background-color:#ffffff;
-    padding:100px 80px;
+    padding:80px 80px 10px 80px;
     text-transform: uppercase;
 }
 
@@ -87,7 +83,7 @@ footer{
     }
 
     .bgimg-1 {
-        min-height: 900px;
+        min-height: 1000px;
     }
 
     .bgimg-2 {
@@ -112,11 +108,11 @@ footer{
 
     .introduce {
         padding:100px 80px;
-        font-size: 28px;
+        font-size: 32px;
     }
 
     .contact {
-        padding:100px 80px;
+        padding:80px 80px;
     }
 
     .contact .title {
