--- a/application/src/main/webapp/page/order.css
+++ b/application/src/main/webapp/page/order.css
@@ -9,8 +9,12 @@ fieldset {
 
 #cartProductsList {
     clear: both;
-    width: 70%;
-    margin: 10px auto 10px auto;
+    margin: 10px 50px 10px 50px;
+}
+
+#cartProductsList table {
+    border: 0;
+    width: 100%;
 }
 
 #productsList {
@@ -21,24 +25,33 @@ fieldset {
 }
 
 #cartTable {
-    width: 500px;
-    /*background-color: #f7f7f7;*/
     text-align: center;
 }
 
 #cartTable td {
-    min-width: 80px;
+    min-width: 70px;
+    width: 10%;
     border-left: solid 1px #cccccc;
 }
 
 #cartTable .cartProductName {
     text-align: left;
-    min-width: 400px;
+    min-width: 350px;
+    width: 60%;
     border-left: none;
 }
 
 #cartTable .cartProductName a {
     text-decoration: none;
+}
+
+#cartTable input {
+    width: 40px;
+    text-align: center;
+}
+
+#cartTable button {
+    padding: 7px 10px;
 }
 
 .cartImage {
@@ -47,5 +60,12 @@ fieldset {
     padding: 10px;
 }
 
+#confirmButton {
+    width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
 
 
