--- a/application/src/main/webapp/page/order.css
+++ b/application/src/main/webapp/page/order.css
@@ -7,6 +7,10 @@ fieldset {
     color: #444;
 }
 
+.content {
+    margin: 10px 50px 10px 50px;
+}
+
 #cartProductsList {
     clear: both;
     margin: 10px 50px 10px 50px;
@@ -46,7 +50,7 @@ fieldset {
 }
 
 #cartTable input {
-    width: 40px;
+    width: 50px;
     text-align: center;
 }
 
@@ -60,7 +64,7 @@ fieldset {
     padding: 10px;
 }
 
-#confirmButton {
+.confirmButton1 {
     width: 200px;
     display: block;
     margin-left: auto;
@@ -68,4 +72,11 @@ fieldset {
     margin-top: 20px;
 }
 
+.confirmButton2 {
+    width: 200px;
+    display: inline-block;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 40px;
+}
 
