--- a/admin/src/main/webapp/dashboard.css
+++ b/admin/src/main/webapp/dashboard.css
@@ -109,9 +109,6 @@ html {
     -webkit-tap-highlight-color: transparent
 }
 
-@-ms-viewport {
-    width: device-width
-}
 
 article, aside, dialog, figcaption, figure, footer, header, hgroup,
 main, nav, section {
@@ -758,11 +755,6 @@ pre code {
     max-width: 100%
 }
 
-.order-first {
-    -ms-flex-order: -1;
-    order: -1
-}
-
 .order-1 {
     -ms-flex-order: 1;
     order: 1
@@ -1359,11 +1351,6 @@ pre code {
         max-width: 100%
     }
 
-    .order-lg-first {
-        -ms-flex-order: -1;
-        order: -1
-    }
-
     .order-lg-1 {
         -ms-flex-order: 1;
         order: 1
@@ -1561,10 +1548,6 @@ pre code {
         max-width: 100%
     }
 
-    .order-xl-first {
-        -ms-flex-order: -1;
-        order: -1
-    }
 
     .order-xl-1 {
         -ms-flex-order: 1;
@@ -1972,11 +1955,6 @@ pre code {
     opacity: 1
 }
 
-.form-control::-ms-input-placeholder {
-    color: #868e96;
-    opacity: 1
-}
-
 .form-control::placeholder {
     color: #868e96;
     opacity: 1
@@ -2095,7 +2073,7 @@ select.form-control-lg:not([size]):not([multiple]) {
     margin-left: -5px
 }
 
-.form-row > .col, .form-row > [class * =col-] {
+.form-row > .col, .form-row > [class  =col-] {
     padding-right: 5px;
     padding-left: 5px
 }
