Add mobile version of contact page.

--- a/application/src/main/webapp/page/contact.css
+++ b/application/src/main/webapp/page/contact.css
@@ -12,8 +12,23 @@
     color: #777777;
 }
 
+.icon {
+    display: inline-block;
+    float: right;
+}
+
 img {
-    width: 30px;
-    height: 30px;
+    width: 2rem;
+    height: 2rem;
     cursor: pointer;
+}
+
+/* phone version 手機版 */
+@media only screen and (max-device-width: 1024px) {
+    .icon {
+        display: block;
+        float: none;
+        text-align: center;
+        padding-top: 3rem;
+    }
 }
