--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -69,7 +69,7 @@ body, html {
 #cart, #member {
     float: right;
     display: block;
-    color: white;
+    color: darkgray;
     text-align: center;
     padding: 14px;
     text-decoration: none;
@@ -78,6 +78,14 @@ body, html {
 #cart:hover, #member:hover {
     background-color: #777777;
     color: #f2f2f2;
+}
+
+#cart.active, #member.active {
+    color: white;
+}
+
+#cart.active:hover, #member.active:hover {
+    background-color: transparent;
 }
 
 .banner {
