Add mobile version for product page.

--- a/application/src/main/webapp/page/form.css
+++ b/application/src/main/webapp/page/form.css
@@ -125,3 +125,8 @@ input:focus {
 .alert {
     color: #dc3545;
 }
+
+/* phone version 手機版 */
+@media only screen and (max-device-width: 1024px) {
+
+}
