--- a/application/src/main/webapp/page/product.css
+++ b/application/src/main/webapp/page/product.css
@@ -43,15 +43,16 @@
 
 #originalPrice {
     text-decoration: line-through;
-    margin-left: 15px;
+    margin-left: 1rem;
 }
 
 select {
-    width: 80px;
-    height: 35px;
+    width: 5.3rem;
+    height: 2.3rem;
     border-style: dotted;
-    font-size: 14px;
+    font-size: 0.88rem;
     outline: none;
+    padding-left: 2rem;
 }
 
 select:hover {
@@ -61,9 +62,9 @@ select:hover {
 
 .addToCart {
     margin-left: 5px;
-    width: 150px;
-    height: 35px;
-    font-size: 15px;
+    width: 10rem;
+    height: 2.3rem;
+    font-size: 1rem;
     background-color: #f7f7f7;
     border: dotted #cccccc 1px;
     border-radius: 5px;
@@ -97,7 +98,7 @@ select:hover {
 .photos p {
     text-align: center;
     letter-spacing: 1px;
-    font-size: 18px;
+    font-size: 1.2rem;
 }
 
 .photos img {
@@ -128,3 +129,25 @@ select:hover {
     }
 }
 
+/* phone version 手機版 */
+@media only screen and (max-device-width: 1024px) {
+    .info-content {
+        width: 100%;
+    }
+
+    .info-content #smallImage {
+        /*width: 100%;*/
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .info-table  {
+        width: 85%;
+        margin-left: 2rem;
+    }
+
+    #buttons {
+        text-align: center;
+    }
+}
