--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -270,8 +270,7 @@ body, html {
     }
 
     #cart {
-        padding: 24px 30px 10px 30px;
-        vertical-align: middle;
+        padding: 24px 30px 9px 30px;
     }
 
     .dropdown #dropbtn {
@@ -294,6 +293,10 @@ body, html {
 
     .banner p {
         font-size: 35px;
+    }
+
+    .bannerRight {
+        display: none;
     }
 
     .bannerRight {
