--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -146,7 +146,7 @@ body, html {
 .bannerRight {
     float: right;
     padding: 30px;
-    margin: 10px 100px 0 0;
+    margin: 10px 100px 10px 10px;
     text-align: center;
     color: white;
     opacity: 0.8;
