--- a/application/src/main/webapp/page/index.css
+++ b/application/src/main/webapp/page/index.css
@@ -51,7 +51,7 @@ h3 {
 
 .introduce {
     padding:50px 80px;
-    text-align: justify;
+    text-align: center;
     color: #777;
     background-color:white;
 }
