--- a/application/src/main/webapp/page/products.css
+++ b/application/src/main/webapp/page/products.css
@@ -7,14 +7,18 @@
 
 .prod-list {
     display: table;
-    margin: 2%;
+    margin: 3% 12%;
 }
 
 .prod-wrapper {
     position: relative;
     display: inline-block;
-    width: 40%;
-    margin: 2% 4.5% 2% 4.5%;
+    width: 36%;
+    margin: 2% 6% 2% 6%;
+}
+
+.prod-wrapper a {
+    text-decoration: none;
 }
 
 .prod-wrapper a:hover {
@@ -22,10 +26,7 @@
 }
 
 .info {
-    position: absolute;
     width: 100%;
-    padding: 0.67rem;
-    bottom: 0;
     color: #444444;
     text-align: center;
 }
@@ -33,6 +34,10 @@
 .info b {
     font-size: 1.03rem;
     letter-spacing: 0.14rem;
+}
+
+.info p {
+    margin: 0;
 }
 
 .originalPrice {
@@ -54,12 +59,12 @@
 
 @media (max-width: 800px) {
     .prod-wrapper {
-        width: 90%;
-        margin: 2% 5% 2% 5%;
+        width: 60%;
+        margin: 2% 20% 2% 20%;
     }
 
     .info {
-        font-size: 15px;
+        font-size: 14px;
     }
 }
 
