--- a/application/src/main/webapp/page/signin.css
+++ b/application/src/main/webapp/page/signin.css
@@ -1,22 +1,9 @@
 .login {
-    min-width: 100px;
-    float: right;
-    border: solid #fff 1px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-right: 15px;
-    margin-top: 5px;
-    margin-left: 5px;
-    text-align: center;
-    text-decoration: none;
-    color: white;
-    background-color: transparent;
-    display: block;
-    z-index: 1;
+    color: black;
 }
 
 .login:hover {
-    background-color: #777777;
+    color: darkgrey;
 }
 
 /* phone version 手機版 */
