--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -149,7 +149,7 @@ a.active {
     border-bottom: solid 1px;
 }
 
-#nav #cart {
+#nav #cart, #nav #dropbtn {
     color: black;
     padding: 0;
     height: 22px;
@@ -165,11 +165,6 @@ a.active {
 
 #nav .dropdown {
     float: right;
-}
-
-#nav .dropdown #dropbtn {
-    color: black;
-    padding: 13px 14px;
 }
 
 #nav #cart.active, #nav #dropbtn.active {
@@ -256,6 +251,7 @@ a.active {
 .dropdown-content {
     display: none;
     position: absolute;
+    margin-left: -1rem;
     background-color: #f9f9f9;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
@@ -264,7 +260,7 @@ a.active {
 .dropdown-content a {
     float: none;
     color: black;
-    padding: 1rem 1.3rem;
+    padding: 0.8rem 1rem;
     text-decoration: none;
     display: block;
     text-align: left;
