--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -155,7 +155,7 @@ a.active {
     height: 22px;
 }
 
-#nav #cart:hover, #nav .dropdown:hover #dropbtn:hover {
+#nav #cart:hover, #nav .dropdown:hover #dropbtn {
     background-color: white;
     color: darkgrey;
     padding-bottom: 5px;
@@ -178,6 +178,33 @@ a.active {
     color: darkgrey;
     padding-bottom: 5px;
     border-bottom: solid 1px;
+}
+
+#nav .dropdown-content {
+    display: none;
+    position: absolute;
+    margin-left: -1rem;
+    background-color: #f9f9f9;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 999;
+}
+
+#nav .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 0.8rem 1rem;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#nav .dropdown-content a:hover {
+    background-color: #ddd;
+    border-bottom: none;
+}
+
+#nav .dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .navbar {
