--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -364,7 +364,7 @@ a.active {
     min-height: 150px;
     max-height: 200px;
     display: block;
-    margin: 2rem auto;
+    margin: 3.5rem auto 1.5rem;
 }
 
 .slidesSection img {
