--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -526,11 +526,11 @@ footer .icon img {
 /* phone version 手機版 */
 @media only screen and (max-device-width: 1024px) {
     body, html {
-        font: 400 30px/1.8 "Lato", sans-serif;
+        font: 400 25px "Lato", sans-serif;
     }
 
     .material-icons {
-        font-size: 50px;
+        font-size: 30px;
     }
 
     #id_header {
