--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -233,20 +233,6 @@ a.active {
     display: block;
 }
 
-.navbar {
-    overflow: visible;
-    position: fixed;
-    background-color: white;
-    width: 100%;
-    height: 50px;
-    z-index: 1;
-    top: 0;
-}
-
-.navbar::after {
-    clear: both;
-}
-
 #tab a {
     float: left;
     display: block;
@@ -538,11 +524,7 @@ footer .icon img {
 /* phone version 手機版 */
 @media only screen and (max-device-width: 1024px) {
     body, html {
-        font: 400 25px "Lato", sans-serif;
-    }
-
-    .material-icons {
-        font-size: 30px;
+        font: 400 28px "Lato", sans-serif;
     }
 
     #id_header {
@@ -554,8 +536,35 @@ footer .icon img {
         padding-bottom: 50px;
     }
 
-    .navbar {
-        height: 100px;
+    .header {
+        width: 90%;
+        padding-top: 20px;
+    }
+
+    .header.shrink {
+        font-size: 95%;
+        padding-top: 10px;
+    }
+
+    #nav #mark_img {
+        top: 10px;
+    }
+
+    img.img {
+        width: 60px;
+    }
+
+    img.img.shrink {
+        padding-top: 5px;
+        width: 55px;
+    }
+
+    .material-icons {
+        font-size: 38px;
+    }
+
+    .shrink .material-icons {
+        font-size: 35px;
     }
 
     #tab a {
@@ -607,6 +616,10 @@ footer .icon img {
     .bannerRight p {
         font-size: 30px;
     }
+
+    footer .tab a {
+         margin-right: 8%;
+     }
 
     .footer-copyright {
         letter-spacing: 0;
